--- a/test_camera.ipynb
+++ b/test_camera.ipynb
@@ -2,31 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the opencv library\n",
     "import cv2\n",
+    "from vision_function import local_plate\n",
     "\n",
-    "cap = cv2.VideoCapture(0)\n",
     "\n",
-    "# Check if the webcam is opened correctly\n",
-    "if not cap.isOpened():\n",
-    "    raise IOError(\"Cannot open webcam\")\n",
-    "print('pass')\n",
+    "# define a video capture object\n",
+    "vid = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
     "\n",
-    "while True:\n",
-    "    ret, frame = cap.read()\n",
-    "    frame = cv2.resize(frame, None, fx=0.5, fy=0.5, interpolation=cv2.INTER_AREA)\n",
-    "    cv2.imshow('Input', frame)\n",
-    "\n",
-    "    c = cv2.waitKey(1)\n",
-    "    if c == 27:\n",
+    "while(True):\n",
+    "    \n",
+    "    # Capture the video frame\n",
+    "    # by frame\n",
+    "    ret, frame = vid.read()\n",
+    "    coor,crop_img,frame = local_plate(frame,\"IMG\")\n",
+    "    # print(coor)\n",
+    "    for i in coor :\n",
+    "        cv2.rectangle(frame, (i[2], i[3]), (i[2] + i[0], i[3] + i[1]), (36, 255, 12), 2)   #x y w h 0 1 2 3    w h x y 0 1 2 3 -- 2 3 0 1\n",
+    "    \n",
+    "    # Display the resulting frame\n",
+    "    cv2.imshow('frame', frame)\n",
+    "    \n",
+    "    # if len(crop_img)>=1:\n",
+    "        # cv2.imwrite(\"crop_real_2.jpg\",crop_img[0])\n",
+    "    \n",
+    "    # the 'q' button is set as the\n",
+    "    # quitting button you may use any\n",
+    "    # desired button of your choice\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "# After the loop release the cap object\n",
+    "vid.release()\n",
+    "# Destroy all the windows\n",
+    "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[80, 284, 81, 59]\n",
+      "[0, 270, 144, 99]\n",
+      "[30, 191, 51, 46]\n",
+      "[116, 98, 193, 171]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [[80, 284, 81, 59], [0, 270, 144, 99], [30, 191, 51, 46], [116, 98, 193, 171]]\n",
+    "for i in test:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
