--- a/try.ipynb
+++ b/try.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "num of box : 74\n",
-      "0\n"
+      "2\n"
      ]
     },
     {
@@ -94,7 +94,7 @@
        "-1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,10 +135,10 @@
     "count = 0\n",
     "for c in cnts:\n",
     "    x,y,w,h = cv2.boundingRect(c)\n",
-    "    # if (w>h) and (1.1<(w/h)<2.2) and (40<h<190):\n",
-    "        # count += 1\n",
-    "        # cv2.rectangle(image, (x, y), (x + w, y + h), (36,255,12), 2)\n",
-    "    cv2.rectangle(image, (x, y), (x + w, y + h), (36,255,12), 2)\n",
+    "    if (w>h) and (1.1<(w/h)<2.2) and (40<h<190):\n",
+    "        count += 1\n",
+    "        cv2.rectangle(image, (x, y), (x + w, y + h), (36,255,12), 2)\n",
+    "    # cv2.rectangle(image, (x, y), (x + w, y + h), (36,255,12), 2)\n",
     "\n",
     "print(count)\n",
     "cv2.imshow('canny', canny)\n",
@@ -151,34 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num of box : 222\n",
-      "number of box that found : 1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from vistion_function import local_plate\n",
+    "from vision_function import local_plate\n",
     "import cv2 as cv\n",
-    "coor,crop_img = local_plate(image_name='train_img_raw/1.jpg')\n",
+    "coor,crop_img,img = local_plate(image_name='My_dataset/test_img_raw/1.jpg', input_form=\"PATH\")\n",
+    "\n",
     "# pure_plate = crop_img[0]\n",
-    "# cv.imwrite(\"pure_plate.jpg\", pure_plate)"
+    "# cv.imwrite(\"pure_plate_22.jpg\", pure_plate)"
    ]
   },
   {
@@ -208,28 +201,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vistion_function import local_plate"
+    "# from vistion_function import local_plate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(106, 157, 3)"
+       "(113, 198, 3)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import cv2 as cv\n",
     "#get the number\n",
-    "pure_plate = cv.imread(\"pure_plate.jpg\")\n",
+    "# pure_plate = cv.imread(\"pure_plate.jpg\")\n",
+    "# pure_plate = cv.imread(\"crop_real_1.jpg\")\n",
+    "pure_plate = cv.imread(\"crop_real_2.jpg\")\n",
+    "\n",
+    "\n",
+    "\n",
     "pure_plate_char = pure_plate[:int(pure_plate.shape[0]*0.65),:]\n",
     "threshold_char = pure_plate_char.shape[0]*0.45\n",
     "\n",
@@ -251,13 +250,29 @@
     "find_front = cv.findContours(canny_blurred_pure_plate, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
     "find_front = find_front[0] if len(find_front) == 2 else find_front[1]\n",
     "count_pp = 0\n",
+    "keep_coor_raw = []\n",
+    "keep_coor = []\n",
     "for i in find_front:\n",
     "    x,y,w,h = cv.boundingRect(i)\n",
-    "    if (h>w)and(h>threshold_char):\n",
-    "        count_pp += 1\n",
-    "        cv.rectangle(pure_plate_char, (x, y), (x + w, y + h), (36,255,12), 2)\n",
+    "    if (h>w)and(h>threshold_char)and((h/w)<5):\n",
+    "        count_pp += 1  \n",
+    "        keep_coor_raw.append([x,y,w,h])\n",
+    "        # cv.rectangle(pure_plate_char, (x, y), (x + w, y + h), (36,255,12), 2)\n",
+    "keep_coor_raw.sort()\n",
+    "if (len(keep_coor_raw)>=1):\n",
+    "    keep_coor.append(keep_coor_raw[0])\n",
+    "    for i in range(len(keep_coor_raw)-1):\n",
+    "        i = i+1\n",
+    "        if ((keep_coor_raw[i][0]-keep_coor_raw[i-1][0]) < 7 ):  # if it close togather\n",
+    "            if (keep_coor_raw[i][2]>keep_coor_raw[i-1][2]):   # if it more wide\n",
+    "                keep_coor[i-1] = keep_coor_raw[i]\n",
+    "        else : keep_coor.append(keep_coor_raw[i])\n",
+    "for i in keep_coor:\n",
+    "    cv.rectangle(pure_plate_char, (i[0], i[1]), (i[0] + i[2], i[1] + i[3]), (36,255,12), 2)\n",
     "\n",
-    "cv.imshow(\"show\",pure_plate_char)\n",
+    "\n",
+    "cv.imshow(\"show_char\",pure_plate_char)\n",
+    "cv.imshow(\"show_province\",pure_plate_province)\n",
     "cv.waitKey(0)\n",
     "\n",
     "pure_plate.shape\n"
@@ -265,10 +280,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keep = [0,1,2,3]\n",
+    "keep[0] = 1\n",
+    "keep"
+   ]
   },
   {
    "cell_type": "code",
