update for demo 1

--- a/test_camera.ipynb
+++ b/test_camera.ipynb
@@ -31,74 +31,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Detecting that an object or model or tf.train.Checkpoint is being deleted with unrestored values. See the following logs for the specific values in question. To silence these warnings, use `status.expect_partial()`. See https://www.tensorflow.org/api_docs/python/tf/train/Checkpoint#restorefor details about the status object returned by the restore function.\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._iterations\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._learning_rate\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.1\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.2\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.3\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.4\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.5\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.6\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.7\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.8\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.9\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.10\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.11\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.12\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.13\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.14\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.15\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.16\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.17\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.18\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.19\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.20\n",
-      "WARNING:tensorflow:Detecting that an object or model or tf.train.Checkpoint is being deleted with unrestored values. See the following logs for the specific values in question. To silence these warnings, use `status.expect_partial()`. See https://www.tensorflow.org/api_docs/python/tf/train/Checkpoint#restorefor details about the status object returned by the restore function.\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._iterations\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._learning_rate\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.1\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.2\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.3\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.4\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.5\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.6\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.7\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.8\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.9\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.10\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.11\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.12\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.13\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.14\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.15\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.16\n",
-      "WARNING:tensorflow:Detecting that an object or model or tf.train.Checkpoint is being deleted with unrestored values. See the following logs for the specific values in question. To silence these warnings, use `status.expect_partial()`. See https://www.tensorflow.org/api_docs/python/tf/train/Checkpoint#restorefor details about the status object returned by the restore function.\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._iterations\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._learning_rate\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.1\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.2\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.3\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.4\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.5\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.6\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.7\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.8\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.9\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.10\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.11\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.12\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.13\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.14\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.15\n",
-      "WARNING:tensorflow:Value in checkpoint could not be found in the restored object: (root).optimizer._variables.16\n"
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n",
+      "['not found', '', '']\n"
      ]
     }
    ],
@@ -113,24 +100,19 @@
     "from PIL import ImageFont, ImageDraw, Image\n",
     "import cv2\n",
     "import time\n",
+    "import tensorflow as tf\n",
+    "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
+    "\n",
     "\n",
     "#set up \n",
     "mlpc = get_model_mlpc() #define model lisense correct\n",
     "mrc = get_model_mrc()\n",
     "mrp = get_model_mpc()\n",
+    "mrp_IN = get_model_mpc_IN()\n",
     "vid = cv2.VideoCapture(0, cv2.CAP_DSHOW) #define capture obj\n",
     "front = cv2.FONT_HERSHEY_SIMPLEX\n",
     "is_found = False\n",
-    "# front = \n",
-    "\n",
-    "def write_th_front(img,text,x,y):\n",
-    "    fontpath = \"front/angsana.ttc\"\n",
-    "    font = ImageFont.truetype(fontpath, 45)\n",
-    "    img_pil = Image.fromarray(img)\n",
-    "    draw = ImageDraw.Draw(img_pil)\n",
-    "    draw.text((x, y),  str(text), font = font, fill = (0, 255, 0, 0))\n",
-    "    img = np.array(img_pil)\n",
-    "    return img\n",
+    "# front =             \n",
     "\n",
     "\n",
     "\n",
@@ -138,25 +120,28 @@
     "while(True):\n",
     "    start = time.time()\n",
     "    ret, frame = vid.read()\n",
-    "    coor,crop_img,frame,is_found = local_plate(frame,\"IMG\",DCN_filter = True,Model = mlpc,detect_thresho=0.55)\n",
-    "    for i in coor :\n",
-    "        cv2.rectangle(frame, (i[2], i[3]), (i[2] + i[0], i[3] + i[1]), (36, 255, 12), 2)   #x y w h 0 1 2 3    w h x y 0 1 2 3 -- 2 3 0 1\n",
-    "    # print(is_found)\n",
-    "    if is_found:\n",
-    "        keep_cut_char , pure_plate_province,keep_coor = local_CP(img = crop_img[0], input_form=\"IMG\")\n",
-    "        if len(keep_cut_char)<2 :\n",
-    "            print(\"something wrong\")\n",
-    "        else :\n",
-    "            read_char,read_province = read_plate(list_char = keep_cut_char,province= pure_plate_province,rc = mrc,rp = mrp,\n",
-    "                                                 is_gray=False,skip_eror_rc=True,skip_eror_rp=True)\n",
     "\n",
-    "            cv2.imwrite(\"province_looklike.jpg\",pure_plate_province)\n",
-    "            # try : result = read_plate(keep_cut_char,\"none\",mrc,is_gray=False)\n",
-    "            # except : result = \"cant read\"\n",
-    "            frame = write_th_front(frame,read_province,x=coor[0][2],y=coor[0][3]+20)\n",
-    "            frame = write_th_front(frame,read_char,x=coor[0][2],y=coor[0][3])\n",
-    "    is_found == False\n",
+    "    result,frame = read_lisense_plate(frame,mrc,mrp_IN,mlpc,show_result=True)\n",
     "\n",
+    "    # is_found == False\n",
+    "    # coor,crop_img,frame,is_found = local_plate(frame,\"IMG\",DCN_filter = True,Model = mlpc,detect_thresho=0.55)\n",
+    "    # for i in coor :\n",
+    "    #     cv2.rectangle(frame, (i[2], i[3]), (i[2] + i[0], i[3] + i[1]), (36, 255, 12), 2)   #x y w h 0 1 2 3    w h x y 0 1 2 3 -- 2 3 0 1\n",
+    "    # # print(is_found)\n",
+    "    # if is_found:\n",
+    "    #     keep_cut_char , pure_plate_province,keep_coor = local_CP(img = crop_img[0], input_form=\"IMG\")\n",
+    "    #     if len(keep_cut_char)<2 :\n",
+    "    #         print(\"something wrong\")\n",
+    "    #     else :\n",
+    "    #         read_char,read_province = read_plate(list_char = keep_cut_char,province= pure_plate_province,rc = mrc,rp = mrp_IN,\n",
+    "    #                                              is_gray=False,skip_eror_rc=True,skip_eror_rp=True)\n",
+    "\n",
+    "    #         cv2.imwrite(\"province_looklike.jpg\",pure_plate_province)\n",
+    "    #         # try : result = read_plate(keep_cut_char,\"none\",mrc,is_gray=False)\n",
+    "    #         # except : result = \"cant read\"\n",
+    "    #         frame = write_th_front(frame,read_province,x=coor[0][2],y=coor[0][3]+20)\n",
+    "    #         frame = write_th_front(frame,read_char,x=coor[0][2],y=coor[0][3])\n",
+    "    print(result)\n",
     "\n",
     "    # Display the resulting frame\n",
     "    stop = time.time()\n",
