--- a/test_camera.ipynb
+++ b/test_camera.ipynb
@@ -31,416 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'ต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['not found', '', '']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['not found', '', '']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'ต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'จต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n",
-      "['found', 'กรุงเทพมหานคร', 'รต7172']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test main camera\n",
     "import cv2\n",
@@ -493,7 +86,7 @@
     "    #         # except : result = \"cant read\"\n",
     "    #         frame = write_th_front(frame,read_province,x=coor[0][2],y=coor[0][3]+20)\n",
     "    #         frame = write_th_front(frame,read_char,x=coor[0][2],y=coor[0][3])\n",
-    "    print(result)\n",
+    "    # print(result)\n",
     "\n",
     "    # Display the resulting frame\n",
     "    stop = time.time()\n",
@@ -549,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
